@@ -612,6 +612,7 @@
         "  SEEN       - Accounts not seen for at least this long",
         "  ACCOUNTMASK - A glob that must match the account name",
         "  EMAIL      - A glob that must match the account's email address",
+        "  TITLE      - A glob that must match the account's title",
         "  HOSTMASK SUPERSET - Account matches if someone with this hostmask can auth to the account",
         "  HOSTMASK EXACT - Account matches if this exact hostmask is in list",
         "  HOSTMASK SUBSET - Account matches if this mask \"covers\" one in their userlist",
@@ -629,6 +630,7 @@
         "  SEEN       - Accounts not seen for at least this long",
         "  ACCOUNTMASK - A glob that must match the account name",
         "  EMAIL      - A glob that must match the account's email address",
+        "  TITLE      - A glob that must match the account's title",
         "  NICKMASK   - A glob that must match a nick registered to the account",
         "  HOSTMASK SUPERSET - Account matches if someone with this hostmask can auth to the account",
         "  HOSTMASK EXACT - Account matches if this exact hostmask is in list",
