@@ -1,6 +1,12 @@
 /***********************************************************************
 X3 ChangeLog
 
+2010-05-06  Matthew Beeching  <jobe@mdbnet.co.uk>
+
+	* src/nickserv.c: Added NickServ search title criteria.
+
+	* src/nickserv.help: Added NickServ search title criteria.
+
 2010-04-29  Matthew Beeching  <jobe@mdbnet.co.uk>
 
 	* src/opserv.c: Minor typo in previous commit where returning 0
